examples/home-assistant/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
  - name: http
    protocol: TCP
    port: 8123
    targetPort: 8123
  type: ClusterIP
